# stm32c071

./: .clang-format  .clangd  .gitignore  CLAUDE.md  CMakeLists.txt  FIRMWARE_AUDIT.md  README.md  STM32C071XX_FLASH.ld  build.py  check_calib.c  flash.py  monitor_com.py  monitor_com4.py  monitor_com_qt.py  monitor_com_ui.py  pwmtest1.ioc  run.py  stm32c071.code-workspace  test_settings.py
.agents/rules/: CODING_STYLE.md
.agents/skills/embedded-systems-engineer/: SKILL.md
.claude/: instructions.md  settings.local  settings.local.json
.claude/bugs/: BUGS.md
.claude/bugs/bug001-delay-uint16-truncation/evidence/: observations.md
.claude/bugs/bug001-delay-uint16-truncation/plans/: fix_plan.md
.claude/bugs/bug001-delay-uint16-truncation/research/: analysis.md
.claude/bugs/bug001-delay-uint16-truncation/results/: outcome.md
.claude/bugs/bug001-example_skeleton/evidence/: observations.md
.claude/bugs/bug001-example_skeleton/plans/: fix_plan.md
.claude/bugs/bug001-example_skeleton/research/: analysis.md
.claude/bugs/bug001-example_skeleton/results/: outcome.md
.github/workflows/: claude-review.yml
Application/: CMakeLists.txt  app_mode.h  main.c  main.h
Application/Src/: main.c
Application/app_state/: CMakeLists.txt  app_state.c  app_state.h
Application/board/: CMakeLists.txt  board.c  board.h  board_config.h
Application/bsp/: CMakeLists.txt
Application/bsp/adc/: CMakeLists.txt  adc.c  adc.h  bsp_adc.c  bsp_adc.h
Application/bsp/gpio/: CMakeLists.txt  gpio.c  gpio.h
Application/bsp/i2c/: CMakeLists.txt  i2c.c  i2c.h
Application/bsp/iwdg/: CMakeLists.txt  iwdg.c  iwdg.h
Application/bsp/lptim/: CMakeLists.txt  lptim.c  lptim.h
Application/bsp/tim/: CMakeLists.txt  tim.c  tim.h
Application/bsp/uart/: CMakeLists.txt  uart.c  uart.h
Application/bsp/usb/: CMakeLists.txt  bsp_usb.c  bsp_usb.h
Application/commands/: CMakeLists.txt  commands.c  commands.h
Application/config/: config.h
Application/crc32/: crc32.c  crc32.h
Application/critical/: critical.c
Application/delay/: CMakeLists.txt  delay.c  delay.h
Application/ds18b20/: CMakeLists.txt  ds18b20.c  ds18b20.h
Application/fan_control/: CMakeLists.txt  fan_control.c  fan_control.h
Application/fan_tacho/: CMakeLists.txt  fan_tacho.c  fan_tacho.h
Application/fifo/: CMakeLists.txt  fifo.c  fifo.h
Application/flash/: CMakeLists.txt  flash.c  flash.h
Application/hdc2010/: CMakeLists.txt  hdc2010.c  hdc2010.h
Application/internal_temp_sensor/: CMakeLists.txt  internal_temp_sensor.c  internal_temp_sensor.h
Application/nvs/: nvs.c  nvs.h
Application/onewire/: onewire.c  onewire.h
Application/program_led/: CMakeLists.txt  program_led.c  program_led.h
Application/push_button/: CMakeLists.txt  push_button.c  push_button.h
Application/pwm_repeater/: CMakeLists.txt  pwm_repeater.c  pwm_repeater.h
Application/serial/: CMakeLists.txt  serial.c  serial.h
Application/settings/: CMakeLists.txt  settings.c  settings.h
Application/sys_time/: CMakeLists.txt  sys_time.c  sys_time.h
Application/system_temp/: CMakeLists.txt  system_temp.c  system_temp.h
Application/telemetry/: CMakeLists.txt  telemetry.c  telemetry.h
Application/temperature_sensor/: CMakeLists.txt  temperature_sensor.c  temperature_sensor.h
Application/thermal_control/: CMakeLists.txt  thermal_control.c  thermal_control.h
Application/timers/: CMakeLists.txt  timers.c  timers.h
Application/usb/: CMakeLists.txt  tusb_config.h  usb.c  usb.h  usb_descriptors.c
Application/watchdog/: CMakeLists.txt  watchdog.c  watchdog.h
Core/Inc/: pwm_repeater.h  stm32c0xx_hal_conf.h  tusb_config.h
Core/Src/: main.c  pwm_repeater.c  stm32c0xx_hal_msp.c  stm32c0xx_it.c
cmake/: build_info.cmake  version.cmake
cmake/stm32cubemx/: CMakeLists.txt
crc32/: CMakeLists.txt  crc32.c
critical/: CMakeLists.txt  critical.h
delay/: CMakeLists.txt  delay.c  delay.h
docs/: pwm_implementation.md  pwm_repeater_comparison.md  requirements.md  requirements_implemented.md
ds18b20/: ds18b20.c  ds18b20.h
fan_control/: CMakeLists.txt  fan_control.c  fan_control.h
monitor_com_ui/: README.md  REFACTORING.md  __init__.py  commands.py  config.py  formatters.py  graph_view.py  logger.py  main.py  models.py  parsers.py  requirements.txt  run.py  serial_worker.py  styles.py  telemetry_table.py
nvs/: CMakeLists.txt  nvs.c
onewire/: CMakeLists.txt  onewire.c  onewire.h
src/temperature_sensor/: temperature_sensor.c  temperature_sensor.h
sys_time/: sys_time.c
temperature_sensor/: temperature_sensor.c  temperature_sensor.h
usb/: CMakeLists.txt  usb.c  usb.h
