add_subdirectory(bsp)
add_subdirectory(watchdog)
add_subdirectory(board)
add_subdirectory(timers)
add_subdirectory(pwm_repeater)
add_subdirectory(crc32)
add_subdirectory(critical)
add_subdirectory(delay)
add_subdirectory(ds18b20)
add_subdirectory(fan_control)
add_subdirectory(nvs)
add_subdirectory(onewire)
add_subdirectory(sys_time)
add_subdirectory(temperature_sensor)
add_subdirectory(usb)
