add_subdirectory(bsp)
add_subdirectory(watchdog)
add_subdirectory(board)
add_subdirectory(timers)
add_subdirectory(pwm_repeater)
add_subdirectory(crc32)
add_subdirectory(critical)
add_subdirectory(delay)
add_subdirectory(ds18b20)
add_subdirectory(fan_control)
add_subdirectory(hdc2010)
add_subdirectory(flash)
add_subdirectory(fan_tacho)
add_subdirectory(nvs)
add_subdirectory(onewire)
add_subdirectory(sys_time)
add_subdirectory(temperature_sensor)
add_subdirectory(usb)
add_subdirectory(serial)
add_subdirectory(settings)
add_subdirectory(commands)
add_subdirectory(telemetry)
add_subdirectory(program_led)
add_subdirectory(push_button)
